<resources>
    <string name="app_name">中国大律师</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_phone">请输入手机号码</string>
    <string name="prompt_password">请输入验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">无效的手机号码</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">验证码错误</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">首页</string>
    <string name="tab_consults">咨询</string>
    <string name="tab_myorders">我的订单</string>
    <string name="tab_learning_center">学习中心</string>
    <string name="tab_avatar_center">个人中心</string>
    <string name="consult_appointment">预约咨询</string>
    <string name="consult_expert">专家咨询</string>
    <string name="consult_im">即时咨询</string>
    <string name="title_update_dialog">版本更新</string>
    <string name="title_share_with">分享到</string>
    <string name="title_changelog">更新日志</string>
    <string name="title_agree">用户协议</string>
    <string name="settings">设置</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="update">更新</string>
    <string name="btn_start_now">立即体验</string>
    <string name="avatar_desc">头像</string>
    <string name="media_ejected">储存卡已拔出，语音功能将暂时不可用</string>
    <string name="media_no_memory">储存卡存储空间不足</string>
    <string name="voice_cancel_rcd_release">松开手指，取消发送</string>
    <string name="chatfooter_releasetofinish">松开 结束</string>
    <string name="chatfooter_presstorcd">按住 说话</string>
    <string name="chatting_send">发送</string>
    <string name="chat_footer_app_btn">更多</string>
    <string name="chat_footer_smiley_btn">表情</string>
    <string name="chat_footer_switch_mode_btn">语音说话与键盘输入切换</string>
    <string name="chat_footer_switch_mode_voice_btn">切换到按住说话</string>
    <string name="chat_footer_switch_mode_keybord_btn">切换到键盘</string>
    <string name="chatfooter_cancel_rcd">手指上滑，取消发送</string>
    <string name="chatfooter_cancel_rcd_release">松开手指，取消发送</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="app_new">new</string>
    <string name="app_panel_pic">图片</string>
    <string name="app_panel_tackpic">拍照</string>
    <string name="app_panel_file">文件</string>
    <string name="app_panel_voice">语音通话</string>
    <string name="app_panel_video">视频通话</string>
    <string name="tip">提示</string>
    <string name="tip_not_wifi">当前处于非Wifi环境，您是否要继续？</string>
    <string name="tip_start_download">开始下载</string>
    <string name="tip_downloading">正在下载&#8230;</string>
    <string name="tip_downloading_p">正在下载&#8230;%d</string>
    <string name="tip_download_failed">下载失败，请检查您的网络</string>
    <string name="tip_make_sure_sd_card_enable">请确认已经插入SD卡</string>
    <string name="tip_sdcard_error">没有找到可用存储</string>
    <string name="tip_network_error">网络连接断开或不可用</string>
    <string name="tip_no_serarch_result">没有找到您搜索的内容</string>
    <string name="tip_loading_error_network">无法连接到服务器，获取数据失败</string>
    <string name="tip_loading_error_server">服务器出错，获取数据失败</string>
    <string name="tip_download_url_empty">没有找到下载地址</string>
    <string name="tip_exit_again">再按一次返回键退出程序</string>
    <string name="tip_loading">正在加载，请稍候&#8230;</string>
    <string name="tip_waiting">请稍候&#8230;</string>
    <string name="tip_latest_version">您的程序是最新的</string>
    <string name="tip_no_version">没有找到到最新版本信息</string>
    <string name="tip_account_invalid">用户名不是一个有效的邮箱或手机号</string>
    <string name="tip_invalid_phone">这不是一个有效的手机号</string>
    <string name="tip_invalid_email">这不是一个有效的邮箱</string>
    <string name="tip_invalid_comment_length">亲，评论字数不能超过250个汉字哦</string>
    <string name="tip_invalid_post_title_length">亲，标题不能超过25汉字哦</string>
    <string name="tip_invalid_post_content_length">亲，帖子不能超过2000汉字哦</string>
    <string name="tip_invalid_indtroduction">亲，最多可以输入35个字哦</string>
    <string name="tip_invalid_nickname">亲，用户名只能是由中英文、数字、下划线和减号组成,长度为4-20位</string>
    <string name="tip_modify_user_success">修改成功</string>
    <string name="ec_voip_unknown_user">未知联系人</string>
    <string name="ec_str_call_status" formatted="false">延迟时间%d（毫秒）丢包率:%d</string>
    <string name="ec_call_number_error">呼叫的号码错误</string>
    <string name="ec_voip_calling_finish">通话结束</string>
    <string name="ec_no_support_voip">呼叫失败或者对方不在线！</string>
    <string name="ec_voip_calling_wait">等待对方接听&#8230;</string>
    <string name="ec_voip_calling_accepting">正在接听...</string>
    <string name="ec_voip_calling_timeout">呼叫超时，请稍后再拨</string>
    <string name="ec_voip_calling_no_answer">无人应答，请稍后再拨</string>
    <string name="ec_voip_call_fail">呼叫失败，请稍后重试&#8230;</string>
    <string name="ec_voip_calling_network_instability">对方不在线或者网络不给力,请直呼</string>
    <string name="ec_voip_call_back_success">回拨呼叫成功，请注意接听系统来电!</string>
    <string name="ec_voip_call_connecting_server">正在连接服务器&#8230;</string>
    <string name="ec_voip_call_connect">正在呼叫对方，请稍后&#8230;</string>
    <string name="ec_voip_call_back_connect">正在呼叫，请稍后&#8230;</string>
    <string name="ec_voip_calling_refuse">对方拒绝您的呼叫请求</string>
    <string name="ec_voip_calling_busy">对方正忙，请稍后再拨</string>
    <string name="ec_voip_call_fail_no_cash">呼叫失败，请查询余额</string>
    <string name="ec_voip_is_talking_tip">正在通话中, 轻击以继续</string>
    <string name="ec_app_err_disconnect_server_tip">无法连接服务器，请稍后再试</string>
    <string name="ec_voip_call_fail_connection_failed_auth">第三方鉴权地址连接失败</string>
    <string name="ec_voip_call_fail_no_pay_account">第三方主账号余额不足</string>
    <string name="ec_voip_call_fail_not_find_appid">第三方应用ID未找到</string>
    <string name="ec_voip_call_fail_not_online_only_call">第三方未上线应用仅限呼叫已配置测试号码</string>
    <string name="ec_voip_call_auth_failed">第三方鉴权失败，子账号余额不足</string>
    <string name="ec_voip_calling_notfound">对方不在线，请稍后重试</string>
    <string name="ec_meeting_not_exist">会议号已解散或不存在</string>
    <string name="ec_meeting_pass_error">会议号密码验证失败</string>
    <string name="ec_voip_call_error">媒体协商失败</string>
    <string name="ec_talk_mode_select">选择呼叫方式</string>
    <string name="ec_talk_codec_select">选择通话编码</string>
    <string name="ec_regsetinfo_name">昵称</string>
    <string name="ec_voip_invite_waiting_tip">正在等待对方接受邀请&#8230;</string>
    <string name="ec_voip_invited_video_tip">邀请你进行视频聊天&#8230;</string>
    <string name="ec_voip_invited_audio_tip">邀请你进行语音通话&#8230;</string>
    <string name="ec_voip_shutdown_tip">对方已挂断，通话结束</string>
    <string name="ec_voip_disconnect_tip">网络异常，通话结束</string>
    <string name="ec_voip_no_resp">对方无响应</string>
    <string name="ec_voip_reject_btn">拒绝</string>
    <string name="ec_voip_audioaccpet">切到语音接听</string>
    <string name="ec_voip_switchto_audio">切到语音通话</string>
    <string name="ec_voip_waitting">连接中&#8230;</string>
    <string name="ec_voip_outcalling">正在呼叫中&#8230;</string>
    <string name="ec_voip_speaker_on">免提</string>
    <string name="ec_voip_mute_on">静音</string>
    <string name="ec_voip_hungup">挂断</string>
    <string name="ec_voip_accept_call">接听</string>
    <string name="vedio_switch">音视频切换</string>
    <string name="str_video_call_stop">结束视频通话</string>
    <string name="str_video_call_begin">开始视频通话</string>
    <string name="str_video_btn_call_end">结束</string>
    <string name="str_tips_wait_invited">正在等待对方接受邀请&#8230;</string>
    <string name="str_call_status" formatted="false">延迟时间%d（毫秒）丢包率:%d</string>
    <string name="str_video_bottom_time" formatted="false">与%1$s视频通话中\t</string>
    <string name="common_enter_activity">当前所在页面,</string>
    <string name="progress_common">请稍候...</string>
    <string name="loading_press">请稍候，正在提交...</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="welcome_slogan">大律师客户端</string>
    <string name="title_order_detail">订单详情</string>
    <string name="name">姓名</string>
    <string name="default_working_life">5年</string>
    <string name="default_company">A律师事务所</string>
    <string name="authentication_status">认证状态</string>
    <string name="default_authentication_status">未认证</string>
    <string name="order_type">订单类型</string>
    <string name="order_info">订单信息</string>
    <string name="defalult_order_status">待办</string>
    <string name="order_barrister_info">律师信息</string>
    <string name="order_call_record">通话记录</string>
    <string name="title_barrister_detail">律师详情</string>
    <string name="title_bespeak">预约设置</string>
    <string name="title_msg">消息</string>
    <string name="title_my_account">我的账户</string>
    <string name="help_doc">使用帮助</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="checkupdate">版本更新</string>
    <string name="username">用户名</string>
    <string name="user_icon">用户头像</string>
    <string name="user_nickname">姓名</string>
    <string name="user_goodat">专长</string>
    <string name="user_introduction">个人简介</string>
    <string name="default_introduction">擅长领域</string>
    <string name="user_phone">电话</string>
    <string name="user_email">邮箱</string>
    <string name="user_gender">性别</string>
    <string name="default_gender">男</string>
    <string name="verify_status">认证状态</string>
    <string name="upload_verify_files">资质上传</string>
    <string name="default_age">80后</string>
    <string name="user_area">地区</string>
    <string name="user_working_life">工作年限</string>
    <string name="user_company">单位名称</string>
    <string name="user_address">地址</string>
    <string name="logout">注销</string>
    <string name="title_user_detail">用户详情</string>
    <string name="mybankcard">我的银行卡</string>
    <string name="extract">提现</string>
    <string name="bankcard">银行卡</string>
    <string name="tip_empty_feedback">不留下点啥是不行的……</string>
    <string name="tip_success_login">登陆成功</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="wait_second">等待%d秒</string>
    <string name="pick_img_from_album">从相册选择</string>
    <string name="title_choose_pic">选择相片</string>
    <string name="take_photo">拍照</string>
    <string name="title_dialog_upload_failed">上传失败</string>
    <string name="msg_dialog_upload_failed">是否重新上传？</string>
    <string name="unknown_name">未填写</string>
    <string name="not_login">未登录</string>
    <string name="commit">提交</string>
    <string name="agree"><u>大律师注册协议</u></string>
    <string name="loading">加载中，请稍候</string>
    <string name="tip_settings_success">设置成功</string>
    <string name="doc_get_money">提现须知</string>
    <string name="hint_get_money">请输入提现金额</string>
    <string name="tip_get_money_success">请求已提交，请等待系统到账通知</string>
    <string name="get_money">提现</string>
    <string name="see_more">查看更多</string>
    <string name="title_barrister_list">律师列表</string>
    <string name="title_faxian">发现</string>
    <string name="tab_faxian">数据中心</string>
    <string name="consult_short_im">即</string>
    <string name="consult_short_appointment">预</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="title_my_orders">我的订单</string>
    <string name="pick_appointment_time">选择预约时间</string>
    <string name="tip_pick_appointment">提示:每次只能预约某一天的最多两个时段</string>
</resources>