<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_common">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal" >-->

        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/tv_toolbar_title"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
        <!--&lt;!&ndash;android:textSize="18sp" />&ndash;&gt;-->
        <!--</LinearLayout>-->
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_settings_name"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_settings_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/layout_selector"
        android:text="@string/help_doc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

    <Button
        android:id="@+id/btn_settings_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:text="@string/about_us" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

    <Button
        android:id="@+id/btn_settings_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:text="@string/feedback" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

    <Button
        android:id="@+id/btn_settings_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:text="@string/checkupdate" />

    <Button
        android:id="@+id/btn_settings_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:layout_marginTop="20dp"
        android:text="@string/logout" />

</LinearLayout>
