<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_faxian"
                android:textColor="#efefef"
                android:textSize="20sp" />
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btn_faxian_im"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/layout_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/consult_short_im"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/consult_appointment_bg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/consult_im" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_faxian_appointment"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/layout_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/consult_short_appointment"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/consult_im_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/consult_appointment"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="中国法律应用大全" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_faxian_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layoutManager="GridLayoutManager"
            app:spanCount="4"
            tools:context=".ui.fragment.LearningCenterFragment"
            tools:listitem="@layout/item_case_type"/>

    </LinearLayout>

</LinearLayout>
