<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/pick_appointment_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_pick_appointment"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:visibility="gone"
        android:id="@+id/textView7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/divider" />

    <com.ogaclejapan.smarttablayout.SmartTabLayout
        android:id="@+id/viewpagertab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:stl_defaultTabTextColor="@color/text_tab_selector"
        app:stl_defaultTabTextHorizontalPadding="24dp"
        app:stl_defaultTabTextSize="14sp"
        app:stl_distributeEvenly="true"
        app:stl_dividerColor="@color/tab_divider"
        app:stl_indicatorColor="@color/colorPrimary"
        app:stl_indicatorCornerRadius="1.5dp"
        app:stl_indicatorInterpolation="smart"
        app:stl_indicatorThickness="3dp"
        app:stl_underlineColor="@color/transparent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar_dialog"
            android:layout_gravity="center" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_dialog_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_selector"
        android:text="@string/ok" />

</LinearLayout>